# FFmpegCommandLine

./: build.gradle  readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xh/ffmpegcommandline/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xh/ffmpegcommandline/: App.java  ContainerUtil.java  MainActivity.java  NotCommandActivity.java  PermissionHelper.java
app/src/main/res/layout/: activity_main.xml  activity_not_command.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/xh/ffmpegcommandline/: ExampleUnitTest.java
command/: build.gradle
command/src/androidTest/java/com/xh/command/: ExampleInstrumentedTest.java
command/src/main/: AndroidManifest.xml
command/src/main/cpp/: CMakeLists.txt  config.h  ffmpeg.c  ffmpegcommand.c  logger.h  not_command_def.h  remux.c  remux.h
command/src/main/java/com/xh/command/: FFmpegCommand.java  FFmpegCommandExecutor.java  FFmpegNotCommand.java  PriorityRunnable.java
command/src/test/java/com/xh/command/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
